# tarpc

./: Cargo.toml  README.md
example-service/: Cargo.toml
example-service/src/: client.rs  server.rs
tarpc/: Cargo.toml
tarpc/examples/: pubsub.rs  readme.rs  server_calling_server.rs
tarpc/src/: lib.rs
tarpc/tests/: service_functional.rs
tcp-transport/: Cargo.toml
tcp-transport/src/: lib.rs
