[package]
name = "tarpc-tcp-transport"
version = "0.1.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
edition = '2018'
license = "MIT"
documentation = "https://docs.rs/tarpc-tcp-transport"
homepage = "https://github.com/google/tarpc"
repository = "https://github.com/google/tarpc"
keywords = ["rpc", "network", "json", "serde", "tarpc"]
categories = ["asynchronous", "network-programming"]
readme = "../README.md"
description = "A TCP-based transport for tarpc services."

[dependencies]
futures-preview = "0.3.0-alpha"
pin-project = "0.4"
serde = "1"
serde_json = "1"
tokio = { version = "0.2.0-alpha", default-features = false, features = ["codec", "io", "net"] }
tokio-net = "0.2.0-alpha"
tokio-serde = { git = "https://github.com/carllerche/tokio-serde", branch = "formats" }

[dev-dependencies]
pin-utils = "0.1.0-alpha"
assert_matches = "1.0"
tarpc-tcp-transport = { path = "." }
tokio-serde = { git = "https://github.com/carllerche/tokio-serde", branch = "formats", features = ["json"] }
